styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box; 
    font-family: 'Roboto', sans-serif;
}

body {
    max-width: 100vw;
    overflow-x: hidden;
}

nav {
    height: 80px;
    display: flex;
}

img {
    width: 100%;
    height: 100%;
    max-height: 50vh;
    padding: 20px;
}

p {
    line-height: 1.5;
}

.nav__container {
    width: 100%;
    max-width: 1200px;
    padding: 0 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
}

.purple {
    color:#7342d6
}

.logo {
    width: 160px;
}

ul {
    display: flex;
}

li {
    list-style-type: none;
}

.nav__link {
    margin-left: 16px;
    text-decoration: none;
    color: #7342d6;
    font-weight: bold;
    padding: 8px;
}

.nav__link:hover {
    text-decoration: underline;
}

.nav__link--primary {
    border: 2px solid #7342d6;
    border-radius: 4px;
}

.nav__link--primary:hover {
    text-decoration: none;
}

#landing {
    background-color: rgba(115, 66, 214, 0.1);
}

header {
    height: calc(100vh - 80px);
}

.header__container {
    padding-top: 32px;
    width: 100%;
    max-width: 720px;
    margin: 0 auto;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.header__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header__img--wrapper {
    padding: 20px;
    z-index: 2;
}

.container {
    padding: 56px 0;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

h1 {
    font-size: 56px;
    color:#7342d6;
    margin-bottom: 24px;
    text-align: center;
}

h2 {
    font-size: 32px;
    margin-bottom: 32px;
    text-align: center; 
}

button {
    cursor: pointer;
}

button:active {
    transform: translateY(1px);
}

.btn {
    background-color:#7342d6;
    color: white;
    padding: 12px 24px;
    font-size: 20px;
    border-radius: 4px;
    border: none;
}


/*

HIGHLIGHTS

*/

#highlights {
    position: relative;
    max-width:100vw;
}

#highlights:before, #highlights:after {
    background: url('assets 2/wave.svg');
    content: "";
    position: absolute;
    width: 101vw;
    height: 12vw;
    left:0;
    z-index: 1;
    background-size: cover;
    background-repeat: no-repeat;
}

#highlights:before {
    transform: translateY(-100%);
    top: 1px;
}

#highlights:after {
    transform: translateY(100%) rotate(180deg);
    bottom: 1px;
}

.highlight__wrapper {
    display: flex;
}

.highlight {
    padding: 0 24px;
    width: calc(100% / 3);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.highlight__para {
    text-align: center;
    max-width: 280px;
}

.highlight__img {
    border: 2px solid #7342d655;
    color: #7342d6;
    width: 100px;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    font-size: 32px;
    margin-bottom: 24px;
}

.highlight__subtitle {
    font-size: 20px;
    margin-bottom: 16px;
}

/* 

FEATURES 

*/

#features{
    padding-top: 8vw;
    background-color: rgba(115, 66, 214, 0.1);
}

.books {
    display: flex;
}

.book {
    width: 25%;
    padding: 24px;
}

.book__img {
    max-height: 380px;
    transition: all 300ms ease;
    cursor: not-allowed;
}

.book__img--wrapper {
    margin-bottom: 8px;
    border-radius: 4px;
    overflow: hidden;
    display: flex;
}

.book:hover .book__img {
    transform: scale(1.03);
}

.book__title {
    font-size: 20px;
    margin-bottom: 8px;
}

.book__title:hover {
    text-decoration: underline;
    cursor: not-allowed;
}

.book__ratings {
    margin-bottom: 8px;
    color: #fabf2a;
}

.book__price--normal {
    text-decoration: line-through;
    padding-right: 6px;
    color: #bfbfbf;
}

